k8s/sample/istio/v1/05_istio_service.yaml
kind: Pod
apiVersion: v1
metadata:
  name: foo-app
  labels:
    app: http-echo
spec:
  containers:
  - name: foo-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=foo"
---
kind: Pod
apiVersion: v1
metadata:
  name: bar-app
  labels:
    app: http-echo
spec:
  containers:
  - name: bar-app
    image: hashicorp/http-echo:0.2.3
    args:
    - "-text=bar"
---
kind: Service
apiVersion: v1
metadata:
  name: foo-bar-service
spec:
  type: ClusterIP
  selector:
    app: http-echo
  ports:
  # Default port used by the image
  - name: foorbar
    protocol: TCP
    port: 5678
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: foobar-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: foobar
spec:
  hosts:
  - "*"
  gateways:
  - foobar-gateway
  http:
  - match:
    - uri:
        exact: /foobar
    rewrite:
        uri: "/"
    route:
    - destination:
        host: foo-bar-service
        port:
          number: 5678
